Don't add overflow scroll to static navigation menu. Fix #7943
Restores old behavior to the static navigation menu.

--- a/src/usr/local/www/css/Compact-RED.css
+++ b/src/usr/local/www/css/Compact-RED.css
@@ -93,7 +93,7 @@ body {
     margin-bottom: 0px;
 }
 
-.dropdown-menu {
+.dropdown-menu-fixed {
     max-height: calc(98vh - 35px);
     overflow-y: auto;
 }
